--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,14 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "dev":"nodemon server.js",
-    "start":"node server.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
