--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
     "simple-peer": "^9.11.1",
+    "simple-peer-light": "^9.10.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.17"
   },
