--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.5",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
     "react": "^19.2.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.2.0",
