--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,24 +1,8 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Start with this - it's perfect for most projects
+.env
+node_modules/
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Add only what you actually encounter:
+# dist/              # If you use a build tool
+# .vscode/           # If using VS Code with a team
+# *.log              # If your app creates log files
